...
            .fillMaxWidth()
            .clickable { focusManager.clearFocus() }
    ) {}
    if (showErrorDialog) {
        AlertDialog(
            onDismissRequest = { showErrorDialog = false },
            title = { Text("Error input") },
            text = { Text("Wrong input. Try one more time") },
            confirmButton = {
                TextButton(onClick = { showErrorDialog = false }) {
                    Text("ОК")
                }
            },
            dismissButton = null
...
